Initial commit of the distributed Monitoring System

--- a/tmpl/host.html
+++ b/tmpl/host.html
@@ -6,6 +6,7 @@
     <title>DistMon</title>
   </head>
   <body class="container">
+    <a href="/"><- Back</a>
     {{ template "proc" .Proc }}
     {{ template "docker" .Docker }}
   </body>
