--- a/tmpl/index.html
+++ b/tmpl/index.html
@@ -14,7 +14,7 @@
       <tbody>
       {{range .Hosts}}
         <tr>
-          <td>{{.Proc.Host.HostName}}</td>
+          <td><a href="http://{{.Hostname}}:55556/host">{{.Proc.Host.HostName}}</a></td>
           <td>{{len .Docker.Containers}}</td>
         </tr>
       {{end}}
